<resources>
    <string name="app_name">超级澡堂94</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="login_code">获取验证码</string>

    <string name="bathroom_location">浴室位置</string>
    <string name="bathroom_choice">选择浴室</string>
    <string name="bathroom_using">使用中</string>
    <string name="bathroom_use">可用</string>
    <string name="appoint">预 约</string>
    <string name="freightBasis">温馨提示：</string>
    <string name="freightBasis1">前30min0.1元/分</string>
    <string name="freightBasis2">后30min0.5元/分</string>
    <string name="drawer_money">钱包</string>
    <string name="drawer_record">消费记录</string>
    <string name="choice_school">选择校区</string>
    <string name="setting">设置</string>
    <string name="setting_call">联系站长</string>
    <string name="start_use">开始使用</string>

    <string name="drawer_rank">排行榜</string>
    <string name="input_phone">请输入手机号</string>
    <string name="input_update_phone">请输入要更换手机号</string>

    <string name="input_code">请填写验证码</string>
    <string name="input_password">请输入密码</string>
    <string name="login_quick">快捷登录</string>
    <string name="back_password">找回密码</string>
    <string name="input_onCar_number">请输入一卡通号或学号</string>

    <string name="login_enter">登 录</string>
    <string name="choice_school_title">选择学校</string>
    <string name="choice_schoolarea_title">选择校区</string>
    <string name="school_type1">附近学校</string>
    <string name="school_type2">其他学校</string>
    <string name="edit_userinfo">编辑资料</string>
    <string name="cancle">取 消</string>
    <string name="pay">支 付</string>
    <string name="finish">完 成</string>
    <string name="fix_user_photo">修改头像</string>
    <string name="nikename">昵称</string>
    <string name="gender">性别</string>
    <string name="age">年龄</string>
    <string name="numberid">学号</string>
    <string name="phone_number">手机号</string>
    <string name="updatephone_number">更换号码</string>
    <string name="user_message">用户消息</string>


    <string name="one_card_solution">一卡通</string>

    <string name="reset_open_pwd">重置开柜密码</string>
    <string name="setting_title">设置</string>
    <string name="setting_exit">退出登录</string>
    <string name="setting_userguide">用户指南</string>
    <string name="aboutus">关于我们</string>
    <string name="checkversion">检查新版本</string>
    <string name="message_tilte">消 息</string>
    <string name="message_more">查看详情</string>
    <string name="should_pay">您有一个订单未支付,请及时支付</string>
    <string name="current_queue">当前排队</string>
    <string name="wait">预计等待</string>
    <string name="rank_alltime">累计时间排行</string>
    <string name="wait_service">待服务</string>
    <string name="line_up">排 队</string>
    <string name="payable">确认支付</string>
    <string name="confirm">确认</string>

    <string name="shiyongshenming">点击"登录",即表示您同意</string>
    <string name="stop">停止计费</string>
    <string name="input_regex">0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXZ</string>

    <!-- 下拉刷新，上拉加载更多 -->
    <string name="qq_header_reset">下拉刷新</string>
    <string name="qq_header_pull">下拉刷新</string>
    <string name="qq_header_pull_over">释放立即刷新</string>
    <string name="qq_header_refreshing">正在加载...</string>
    <string name="qq_header_completed">刷新成功</string>


    <!-- 下拉刷新，上拉加载更多 -->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">释放立即刷新</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_hint_finish">刷新完成</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">释放载入更多</string>

</resources>
