<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/wallet_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:paddingLeft="@dimen/x20"
            android:paddingRight="@dimen/x20"
            android:src="@drawable/selector_back" />

        <TextView
            style="@style/textview40_black"
            android:layout_centerInParent="true"
            android:text="更换手机号码"
            android:textSize="20sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/y1"
        android:background="@color/line" />

    <EditText
        android:id="@+id/login_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x40"
        android:layout_marginTop="@dimen/y100"
        android:background="@android:color/transparent"
        android:cursorVisible="true"
        android:drawableLeft="@mipmap/input_phone"
        android:drawablePadding="@dimen/x20"
        android:hint="@string/input_phone"
        android:inputType="number"
        android:maxLength="11"
        android:textColorHint="@color/gray999"
        android:textCursorDrawable="@drawable/shape_quicklogin_et_cursor"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="@dimen/x20"
        android:layout_marginRight="@dimen/x20"
        android:layout_marginTop="@dimen/y4"
        android:background="@color/line" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y80"
        android:layout_marginTop="@dimen/y60">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="@dimen/x30"
            android:layout_toLeftOf="@+id/login_code"
            android:orientation="vertical">

            <EditText
                android:id="@+id/login_input_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="@dimen/x40"
                android:background="@android:color/transparent"
                android:cursorVisible="true"
                android:drawableLeft="@mipmap/input_code"
                android:drawablePadding="@dimen/x20"
                android:hint="@string/input_code"
                android:inputType="number"
                android:maxLength="6"
                android:textColorHint="@color/gray999"
                android:textCursorDrawable="@drawable/shape_quicklogin_et_cursor"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="@dimen/x20"
                android:layout_marginTop="@dimen/y4"
                android:background="@color/line" />

        </LinearLayout>

        <Button
            android:id="@+id/login_code"
            android:layout_width="@dimen/x280"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/x20"
            android:background="@drawable/selector_corner_blue_white"
            android:gravity="center"
            android:text="@string/login_code"
            android:textColor="@color/blue4DA9FF"
            android:textSize="15sp" />
    </RelativeLayout>

    <EditText
        android:id="@+id/update_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x40"
        android:layout_marginTop="@dimen/y90"
        android:background="@android:color/transparent"
        android:cursorVisible="true"
        android:drawableLeft="@mipmap/input_phone"
        android:drawablePadding="@dimen/x20"
        android:hint="@string/input_update_phone"
        android:inputType="number"
        android:maxLength="11"
        android:textColorHint="@color/gray999"
        android:textCursorDrawable="@drawable/shape_quicklogin_et_cursor"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="@dimen/x20"
        android:layout_marginRight="@dimen/x20"
        android:layout_marginTop="@dimen/y4"
        android:background="@color/line" />

    <Button
        android:id="@+id/login_enter"
        style="@style/textview30_white"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginLeft="@dimen/x20"
        android:layout_marginRight="@dimen/x20"
        android:layout_marginTop="@dimen/y80"
        android:background="@drawable/selector_bg_corner_blue"
        android:gravity="center"
        android:text="@string/confirm" />
</LinearLayout>